--- a/.gitignore
+++ b/.gitignore
@@ -152,5 +152,5 @@ dmypy.json
 
 # End of https://www.toptal.com/developers/gitignore/api/python,vscode
 
-oncotree-*.json
+oncotree*.json
 oncotree.tmp.json
