--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,11 +5,14 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "name": "Python: Current File",
+      "name": "Python: Oncotree FHIR convert-all",
       "type": "python",
       "request": "launch",
-      "program": "${file}",
-      "console": "integratedTerminal"
+      "program": "${workspaceFolder}/oncotree-fhir.py",
+      "console": "integratedTerminal",
+      "args": [
+        "convert-all"
+      ]
     }
   ]
 }
