--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,6 +11,7 @@
       "program": "${workspaceFolder}/oncotree-fhir.py",
       "console": "integratedTerminal",
       "args": [
+        "--write-tsv",
         "convert-all"
       ]
     }
