--- a/.gitignore
+++ b/.gitignore
@@ -148,7 +148,7 @@ dmypy.json
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
-*.code-workspace
+!*.code-workspace
 
 # End of https://www.toptal.com/developers/gitignore/api/python,vscode
 
