fix dumb mistake
version was not passed to write_codesystem when converting everything...
plus, changes in vscode launch.json

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,6 +12,8 @@
       "console": "integratedTerminal",
       "args": [
         "--write-tsv",
+        "--output=output/$version.json",
+        "--tsv-output=output/$version.tsv",
         "convert-all"
       ]
     }
